TL-6608 block_totara_alerts: fixed rtl alignment of icons
Reviewed-on: https://review.totaralms.com/7948
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/blocks/totara_alerts/styles.css
+++ b/blocks/totara_alerts/styles.css
@@ -13,15 +13,21 @@
 .block_totara_alerts .content li .information {
     float: right;
 }
+.dir-rtl .block_totara_alerts .content li .information {
+    float: left;
+}
 
 .block_totara_alerts .content li :first-child {
     margin-right: 3px;
     float: left;
 }
+.dir-rtl .block_totara_alerts .content li :first-child {
+    margin-left: 3px;
+    float: right;
+}
 
 .block_totara_alerts .content li span,
 .block_totara_alerts .content li > a {
     vertical-align: top;
-    padding-top: 5px;
-    padding-left: 3px;
+    padding: 5px 3px 0;
 }
